Update: Fix name in desktop file.

--- a/templates/launchers/terminal-sticky.desktop.j2
+++ b/templates/launchers/terminal-sticky.desktop.j2
@@ -8,4 +8,4 @@ Icon={{ ansible_env.HOME }}/.config/zoidy_matecocido/icons/terminal_and-glue_116
 Icon[en_US]={{ ansible_env.HOME }}/.config/zoidy_matecocido/icons/terminal_and-glue_1166879.png
 Name[en_US]=Termbud [sticky icky icky]
 Exec={{ ansible_env.HOME }}/.local/bin/bash -c "DUBS_ALWAYS_ON_VISIBLE=true mate-terminal {{ zoidy_matecocido_terminal_geometry }} -e {{ ansible_env.HOME }}/.local/bin/bash"
-Name=Termdub [normal]
+Name=Termbud [sticky icky icky]
