Improve: Replace gvim details with simpler call to new gvim-open-kindness.

--- a/templates/dubs-vim.desktop.j2
+++ b/templates/dubs-vim.desktop.j2
@@ -6,6 +6,7 @@ Type=Application
 Terminal=false
 Name={{ zoidy_matecocido_dubs_vim_name }}
 Name[en_US]={{ zoidy_matecocido_dubs_vim_name }}
-Exec={{ ansible_env.HOME }}/.local/bin/bash -c "{{ ansible_env.HOME }}/.local/bin/gvim --servername SAMPI --remote-silent {{ zoidy_matecocido_dubs_vim_edit }} && xdotool search --name SAMPI windowactivate && wmctrl -b add,sticky -r SAMPI"
+# SYNC_ME: SAMPI syncs to Home Fries' ${HOMEFRIES_GVIM_PRIMARY:-SAMPI}.
+Exec={{ ansible_env.HOME }}/.local/bin/bash -c "{{ ansible_env.HOME }}/.homefries/bin/gvim-open-kindness '' '' '' {{ zoidy_matecocido_dubs_vim_edit }} && wmctrl -b add,sticky -r SAMPI"
 Icon={{ zoidy_matecocido_dubs_vim_icon }}
 Icon[en_US]={{ zoidy_matecocido_dubs_vim_icon }}
