Enhance: Use GnuCash GUI shim to avoid opening if cron running.
- Because Waffle Batter Archetype's new GnuCash quotes update and books report
  script, don't work on books while another process updating stock quotes for
  the same books.

--- a/templates/launchers/gnucash.desktop.j2
+++ b/templates/launchers/gnucash.desktop.j2
@@ -5,6 +5,6 @@ Type=Application
 Terminal=false
 Icon=gnucash
 Icon[en_US]=gnucash
-Exec={{ ansible_env.HOME }}/.local/bin/gnucash
+Exec={{ ansible_env.HOME }}/.waffle/bin/gnucash-gui-shim-dont-compete-with-cron
 Name[en_US]=GnuCash
 Name=GnuCash
