Update: Use Linux Mint 21.1 mate-panel notification-area position

--- a/templates/org-mate-panel.dconf.j2
+++ b/templates/org-mate-panel.dconf.j2
@@ -26,8 +26,8 @@ toplevel-id='bottom'
 applet-iid='NotificationAreaAppletFactory::NotificationArea'
 locked=true
 object-type='applet'
-panel-right-stick=false
-position=1271
+panel-right-stick=true
+position=20
 toplevel-id='bottom'
 
 [objects/window-list]
