Improve: Simplify launcher position values per latest mate-panel
- mate-panel used to crash if launch 'position' values caused
  icons to overlap. But latest mate-panel will slide the next
  launcher to the next appropriate position, so we can simplify
  position values.

--- a/templates/org-mate-panel.dconf.j2
+++ b/templates/org-mate-panel.dconf.j2
@@ -27,7 +27,7 @@ applet-iid='NotificationAreaAppletFactory::NotificationArea'
 locked=true
 object-type='applet'
 panel-right-stick=true
-position=20
+position=60
 toplevel-id='bottom'
 
 [objects/window-list]
@@ -41,8 +41,8 @@ toplevel-id='toplevel-0'
 applet-iid='MateWeatherAppletFactory::MateWeatherApplet'
 locked=true
 object-type='applet'
-panel-right-stick=false
-position=1710
+panel-right-stick=true
+position=20
 toplevel-id='bottom'
 
 [objects/zoidy-mate-weather/prefs]
@@ -57,8 +57,8 @@ location4='Minneapolis'
 applet-iid='MultiLoadAppletFactory::MultiLoadApplet'
 locked=true
 object-type='applet'
-panel-right-stick=false
-position=1767
+panel-right-stick=true
+position=10
 toplevel-id='bottom'
 
 [objects/zoidy-multi-load/prefs]
@@ -68,8 +68,8 @@ view-memload=false
 applet-iid='WnckletFactory::WorkspaceSwitcherApplet'
 locked=true
 object-type='applet'
-panel-right-stick=false
-position=1505
+panel-right-stick=true
+position=40
 toplevel-id='bottom'
 
 [toplevels/bottom]
