Improve: Add separator between notification area and workspace switcher

--- a/templates/org-mate-panel.dconf.j2
+++ b/templates/org-mate-panel.dconf.j2
@@ -1,6 +1,6 @@
 # vim:ft=dosini
 [general]
-object-id-list=['window-list', 'menu-bar', 'notification-area', 'xapp-status', 'zoidy-workspace-switcher', 'separator-1', 'zoidy-mate-weather', 'separator-2', 'zoidy-multi-load', 'clock'{{ custom_object_ids }}]
+object-id-list=['window-list', 'menu-bar', 'notification-area', 'xapp-status', 'separator-1', 'zoidy-workspace-switcher', 'separator-2', 'zoidy-mate-weather', 'separator-3', 'zoidy-multi-load', 'clock'{{ custom_object_ids }}]
 toplevel-id-list=['bottom', 'toplevel-0']
 
 [objects/clock]
@@ -34,10 +34,17 @@ toplevel-id='bottom'
 locked=true
 object-type='separator'
 panel-right-stick=true
-position=21
+position=31
 toplevel-id='bottom'
 
 [objects/separator-2]
+locked=true
+object-type='separator'
+panel-right-stick=true
+position=21
+toplevel-id='bottom'
+
+[objects/separator-3]
 locked=true
 object-type='separator'
 panel-right-stick=true
