Bugfix: Update meld launcher to run meld from flatpak

--- a/templates/launchers/meld.desktop.j2
+++ b/templates/launchers/meld.desktop.j2
@@ -197,7 +197,7 @@ Keywords[sr]=разлике;стопи;
 Keywords[sr@latin]=razlike;stopi;
 Keywords[sv]=diff;merge;sammanfogning;
 Keywords[tr]=diff;fark;birleştir;merge;
-Exec={{ ansible_env.HOME }}/.local/bin/meld %F
+Exec=flatpak run org.gnome.meld %F
 Terminal=false
 Type=Application
 Icon=meld
