Improve: Simplify path to Spotify Desktop launcher icon

--- a/templates/launchers/spotify.desktop.j2
+++ b/templates/launchers/spotify.desktop.j2
@@ -5,7 +5,8 @@ Type=Application
 Name=Spotify
 Name[en_US]=Spotify
 GenericName=Music Player
-Icon=/usr/share/icons/hicolor/48x48/apps/spotify-client.png
+# Icon=/usr/share/icons/hicolor/48x48/apps/spotify-client.png
+Icon=spotify-client
 Icon[en_US]=spotify
 # 2019-03-05: Use kdocker, so Spotify minizimes to the tray.
 #   Exec=kdocker -q -i <...>
