Improve: Ensure PATH reset when launching Vanilla Terminal
- Otherwise inherits PATH from normal satiated terminal session.

--- a/templates/launchers/terminal-vanilla.desktop.j2
+++ b/templates/launchers/terminal-vanilla.desktop.j2
@@ -2,7 +2,8 @@
 # vim:ft=desktop
 [Desktop Entry]
 TryExec=mate-terminal
-Exec=/bin/bash -c "mate-terminal -e '/bin/bash --noprofile --norc' --geometry=130x48+402+89"
+# Reset PATH, lest it's a copy of your (full) mate-desktop PATH
+Exec=/bin/bash -c "PATH=$(getconf PATH) mate-terminal -e '/bin/bash --noprofile --norc' --geometry=130x48+402+89"
 Icon={{ ansible_env.HOME }}/.config/zoidy_matecocido/icons/terminal_and-breads_1343964.svg
 Icon[en_US]={{ ansible_env.HOME }}/.config/zoidy_matecocido/icons/terminal_and-breads_1343964.svg
 Type=Application
